[gd_scene load_steps=14 format=4 uid="uid://j0l5hc388gmj"]

[ext_resource type="Script" path="res://UI/HandCards/HandCard3D.gd" id="1_iur57"]
[ext_resource type="PackedScene" uid="uid://bjuv8jfc5pykg" path="res://UI/HandCards/HandCardEnergySocket.tscn" id="2_87ldq"]
[ext_resource type="Material" uid="uid://72pgvo6r6k7c" path="res://UI/HandCards/HandCardMaterial.tres" id="3_cro0o"]
[ext_resource type="PackedScene" uid="uid://cr5uo2crw6yep" path="res://Logic/Utility/SmoothMovement.tscn" id="4_v18nh"]
[ext_resource type="PackedScene" uid="uid://yttsolijsbto" path="res://Assets/Models/HUD_Card/GLB/SimpleCard.glb" id="5_pkbxk"]
[ext_resource type="PackedScene" uid="uid://bu5g84clr48vs" path="res://UI/HandCards/HandCardTexture.tscn" id="6_ywg8h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wvkek"]

[sub_resource type="ArrayMesh" id="ArrayMesh_d41tx"]
_surfaces = [{
"aabb": AABB(-0.701308, -0.979167, -0.128396, 1.40262, 1.95833, 0.256792),
"format": 34896613377,
"index_count": 912,
"index_data": PackedByteArray("JQB0AFkAJQBzAHQAWQAqAAsAWQB0ACoAdAADACoAdABHAAMAcwBHAHQAcwATAEcAEwB1AEcAEwBwAHUARwAtAAMARwB1AC0AdQAHAC0AdQBKAAcAcABKAHUAcAAWAEoAHwB2AFMAHwBtAHYAUwAwAA8AUwB2ADAAdgAFADAAdgBNAAUAbQBNAHYAbQAZAE0AGQB3AE0AGQBqAHcATQAzAAUATQB3ADMAdwABADMAdwApAAEAagApAHcAagASACkACQB4AD8ACQAoAHgAPwA4AAwAPwB4ADgAeAAEADgAeAAyAAQAKAAyAHgAKAAAADIADwB5AD0ADwAwAHkAPQA2AAoAPQB5ADYAeQABADYAeQAzAAEAMAAzAHkAMAAFADMABwB6AC0ABwA6AHoALQAqAAMALQB6ACoAegALACoAegA8AAsAOgA8AHoAOgAOADwADgB7ADwADgA7AHsAPAA3AAsAPAB7ADcAewAKADcAewA9AAoAOwA9AHsAOwAPAD0AAgB8ACwAAgA0AHwALAAvAAYALAB8AC8AfAANAC8AfAA+AA0ANAA+AHwANAAIAD4ACAB9AD4ACAA1AH0APgA5AA0APgB9ADkAfQAMADkAfQA/AAwANQA/AH0ANQAJAD8AFgB+AEoAFgBnAH4ASgA6AAcASgB+ADoAfgAOADoAfgBQAA4AZwBQAH4AZwAcAFAAHAB/AFAAHABkAH8AUAA7AA4AUAB/ADsAfwAPADsAfwBTAA8AZABTAH8AZAAfAFMAEgCAACkAEgBhAIAAKQA2AAEAKQCAADYAgAAKADYAgABWAAoAYQBWAIAAYQAiAFYAIgCBAFYAIgBeAIEAVgA3AAoAVgCBADcAgQALADcAgQBZAAsAXgBZAIEAXgAlAFkACQCCAEIACQA1AIIAQgBcACQAQgCCAFwAggAnAFwAggBDACcANQBDAIIANQAIAEMAJACDAFgAJABcAIMAWABdACMAWACDAF0AgwAmAF0AgwBbACYAXABbAIMAXAAnAFsAIwCEAFcAIwBdAIQAVwBeACIAVwCEAF4AhAAlAF4AhABaACUAXQBaAIQAXQAmAFoAAACFAEQAAAAoAIUARABfABAARACFAF8AhQAkAF8AhQBCACQAKABCAIUAKAAJAEIAEACGAEUAEABfAIYARQBgABEARQCGAGAAhgAjAGAAhgBYACMAXwBYAIYAXwAkAFgAEQCHAEYAEQBgAIcARgBhABIARgCHAGEAhwAiAGEAhwBXACIAYABXAIcAYAAjAFcADQCIAEAADQA5AIgAQABiAB4AQACIAGIAiAAhAGIAiABBACEAOQBBAIgAOQAMAEEAHgCJAFIAHgBiAIkAUgBjAB0AUgCJAGMAiQAgAGMAiQBVACAAYgBVAIkAYgAhAFUAHQCKAFEAHQBjAIoAUQBkABwAUQCKAGQAigAfAGQAigBUAB8AYwBUAIoAYwAgAFQABgCLAC4ABgAvAIsALgBlABgALgCLAGUAiwAeAGUAiwBAAB4ALwBAAIsALwANAEAAGACMAEwAGABlAIwATABmABcATACMAGYAjAAdAGYAjABSAB0AZQBSAIwAZQAeAFIAFwCNAEsAFwBmAI0ASwBnABYASwCNAGcAjQAcAGcAjQBRABwAZgBRAI0AZgAdAFEABACOADEABAAyAI4AMQBoABsAMQCOAGgAjgAQAGgAjgBEABAAMgBEAI4AMgAAAEQAGwCPAE8AGwBoAI8ATwBpABoATwCPAGkAjwARAGkAjwBFABEAaABFAI8AaAAQAEUAGgCQAE4AGgBpAJAATgBqABkATgCQAGoAkAASAGoAkABGABIAaQBGAJAAaQARAEYADACRAEEADAA4AJEAQQBrACEAQQCRAGsAkQAbAGsAkQAxABsAOAAxAJEAOAAEADEAIQCSAFUAIQBrAJIAVQBsACAAVQCSAGwAkgAaAGwAkgBPABoAawBPAJIAawAbAE8AIACTAFQAIABsAJMAVABtAB8AVACTAG0AkwAZAG0AkwBOABkAbABOAJMAbAAaAE4AAgCUACsAAgAsAJQAKwBuABUAKwCUAG4AlAAYAG4AlAAuABgALAAuAJQALAAGAC4AFQCVAEkAFQBuAJUASQBvABQASQCVAG8AlQAXAG8AlQBMABcAbgBMAJUAbgAYAEwAFACWAEgAFABvAJYASABwABMASACWAHAAlgAWAHAAlgBLABYAbwBLAJYAbwAXAEsACACXAEMACAA0AJcAQwBxACcAQwCXAHEAlwAVAHEAlwArABUANAArAJcANAACACsAJwCYAFsAJwBxAJgAWwByACYAWwCYAHIAmAAUAHIAmABJABQAcQBJAJgAcQAVAEkAJgCZAFoAJgByAJkAWgBzACUAWgCZAHMAmQATAHMAmQBIABMAcgBIAJkAcgAUAEgA"),
"lods": [0.00633296, PackedByteArray("dAAqAAsAdAADACoAdAALADcAdABHAAMAcwBHAHQAcwATAEcAgAB0ADcAgABzAHQAcwBIABMAgAA3AAoAgAAKADYAKQA2AAEAKQCAADYAEgCAACkARgCAABIAEQCAAEYAJABzAIAAEQCFAIAAhQAkAIAARQCFABEAEACFAEUARACFABAAAACFAEQAcQBzACQAhQBxACQAcQBIAHMAcQAUAEgAcQBJABQAcQAVAEkAlwAVAHEAhQCXAHEAlwArABUAAAAoAIUAKACXAIUAKAAAADIANAArAJcAKAA0AJcANAACACsAKAAyAHgAAgA0AHwAAgB8ACwANAAoAD4ANAA+AHwAKAB4AD8AKAA/AD4ALAB8AC8AfAA+AC8APgA/ADgAPwB4ADgAeAAyAAQAeAAEADgAPgA4AC8AOAAEADEALwA4AJEAOAAxAJEALAAvAAYALwCRAIsABgAvAIsAkQAxAGsAiwCRAGsABgCLAC4ALAAGAC4ABACOADEABAAyAI4AMgBEAI4AMgAAAEQAjgBEABAAjgAQAGgAMQCOAGgAaAAQAEUAaABFABEAaAARAEYAMQBoABkAaABGAGoAGQBoAGoAagBGABIAagASACkAagApAHcAGQBqAHcAdwApAAEAdwABADMATQB3ADMAGQB3AE0ATQAzAAUAawAxABkAdgAZAE0AawAZAHYAdgBNAAUAawB2AB8AdgAFADAAMAAFADMAHwB2AH4AfgB2ADAAZwBrAB8AZwAfAH4AiwBrAGcAZQCLAGcALgCLAGUAFgBlAGcALgBlABYAFgBnAH4AbgAuABYAlAAuAG4AbgAWAHAALAAuAJQAAgAsAJQAAgCUACsAKwCUAG4AKwBuABUAFQBuAEkASQBuABQAFABuAHAAFABwAEgASABwABMAEwBwAHUAEwB1AEcARwB1AC0ARwAtAAMAcABKAHUAcAAWAEoAFgB+AEoASgB+ADoAfgAwADoASgA6AAcAdQBKAAcAdQAHAC0AOgAwAD0AOgA9ADwAMAB5AD0AMAAzAHkAeQAzAAEAeQABADYAPQB5ADYAPQA2AAoAPAA9AAoAPAAKADcAPAA3AAsAegA8AAsAOgA8AHoABwA6AHoABwB6AC0ALQB6ACoAegALACoALQAqAAMA"), 0.0402949, PackedByteArray("RwADACoARwAqADcARwBIABMARwAUAEgARwBJABQAKQBHADcAKQA3AAoAKQAKADYAKQA2AAEAAgBJAEcAAgAVAEkARAACAEcARABHACkAAAACAEQAAgAAAHwAEABEACkAEAApAEUARQApABEAEQApAEYARgApABIAAAB4AHwAAAAyAHgAeAAyAAQAfAB4AAQAAgB8ACwALAB8AAYALAAGAJQAlAAHAHUAlAAGAAcAdQAHAC0ABwB6AC0ALQB6ACoALQAqAAMAegA3ACoAegAKADcAegB5AAoAeQA2AAoAeQABADYAeQAzAAEABQAzAHkABwB5AHoABwAFAHkAiwAFAAcABgCLAAcABAAFAIsABgAEAIsAfAAEAAYABACOAAUABQCOAHcABQB3ADMAdwABADMAdwApAAEAdwASACkAdwBGABIAjgBGAHcABAAyAI4AMgBEAI4AMgAAAEQAjgBEABAAjgARAEYAjgAQAEUAjgBFABEAEwB1AEcASAB1ABMARwB1AC0ARwAtAAMAFAB1AEgAFACUAHUASQCUABQAFQCUAEkAAgCUABUAAgAsAJQA"), 0.0698535, PackedByteArray("RwADACoARwAqADYAEgBHADYAEgA2AAEAEABHABIAEAACAEcAAgAVAEcAAAACABAAAgAAACwARwAtAAMAFQAtAEcAFQCUAC0AAgCUABUAAgAsAJQALAAGAJQAlAAGAC0ALQAGAAcABwAFADMABwAzACoAfgAFAAcABAAFAH4ABgB+AAcABgAEAH4ALAAEAAYALAAAAAQABwAqAC0ALQAqAAMAMwASAAEAMwAQABIAjgAQADMAAAAQAI4AMwABADYAKgAzADYABAAAAI4ABQCOADMABACOAAUA"), 0.148967, PackedByteArray("AgADACoAAAACACoAAAAqAAEAAgAtAAMAAgAGAC0AMwAAAAEAMwABACoALQAqAAMABwAqAC0ABwAzACoABwAFADMABAAFAAcABgAEAAcALQAGAAcAAgAEAAYAAgAAAAQABAAAAAUABQAAADMA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 154,
"vertex_data": PackedByteArray("te2dDf+/AAC17WHy/78AAEkSnQ3/vwAASRJh8v+/AAC17Z0N/z8AALXtYfL/PwAASRKdDf8/AABJEmHy/z8AABxUKwhU1QAA4qsrCFTVAADiq9P3VNUAABxU0/dU1QAA4qsrCKoqAAAcVCsIqioAABxU0/eqKgAA4qvT96oqAAAG9aM+VNUAAAb1/39U1QAABvVbwVTVAAD4ClvBVNUAAPgK/39U1QAA+AqjPlTVAAD4ClvBqioAAPgK/3+qKgAA+AqjPqoqAAAG9VvBqioAAAb1/3+qKgAABvWjPqoqAAAcVFvBAAAAABxU/38AAAAAHFSjPgAAAADiq1vBAAAAAOKr/38AAAAA4qujPgAAAADiq1vB//8AAOKr/3/+/wAA4qujPv7/AAAcVFvB//8AABxU/3/+/wAAHFSjPv7/AAD91BoJrdEAAMXz+N+t0QAAASvk9q3RAAA5DAYgrdEAAHoNCQr/fwAAeg319f9/AAA5DAYgUS4AAAErGglRLgAA/dTk9lEuAADF8wYgUS4AAITyCQr/fwAAhPL19f9/AAABKxoJrdEAAP9/KwhU1QAA/dTk9q3RAAD/f9P3VNUAAP3UGglRLgAA/38rCKoqAAABK+T2US4AAP9/0/eqKgAAHFT///9/AADiq////38AABxUAAD/fwAA4qsAAP9/AAAcVFEfVQUAAOKrUR9VBQAA4qtRH6n6AAAcVFEfqfoAAMXzBiCt0QAABvVRX1TVAAAG9a2gVNUAADkM+N+t0QAA+AqtoFTVAAD4ClFfVNUAADkM+N9RLgAA+AqtoKoqAAD4ClFfqioAAMXz+N9RLgAABvWtoKoqAAAG9VFfqioAABxUreBVBQAAHFStoAAAAAAcVFFfAAAAAOKrreBVBQAA4qutoAAAAADiq1FfAAAAAOKrreCp+gAA4qutoP7/AADiq1Ff/v8AABxUreCp+gAAHFStoP7/AAAcVFFf/v8AAP9/oz7+/wAA/3//f/7/AAD/f1vB//8AAPDVoz6p+gAA8NX/f6n6AADw1VvBqfoAAP9/oz4AAAAA/3//fwAAAAD/f1vBAAAAAA4qoz5VBQAADir/f1UFAAAOKlvBVQUAAP//oz7/fwAA////f/9/AAD//1vB/38AAPDVoz5VBQAA8NX/f1UFAADw1VvBVQUAAAAAoz7/fwAAAAD/f/9/AAAAAFvB/38AAA4qoz6p+gAADir/f6n6AAAOKlvBqfoAAEsqgOCG9QAAsQFT4P9/AACz1YDgeAoAAE3+U+D/fwAAd9VCAf9/AAB31bz+/38AAIcqvP7/fwAA/3////9/AACHKkIB/38AAP9/AAD/fwAASyqA4HgKAAD/f63gVQUAALPVgOCG9QAA/3+t4Kn6AAD/f1EfqfoAAP9/UV///wAA/3+toP//AACz1X4fhvUAAPDVUV+p+gAA8NWtoKn6AAD/f1EfVQUAAP9/UV8AAAAA/3+toAAAAABLKn4feAoAAA4qUV9VBQAADiqtoFUFAABN/qsf/38AAP//UV//fwAA//+toP9/AACz1X4feAoAAPDVUV9VBQAA8NWtoFUFAACxAasf/38AAAAAUV//fwAAAACtoP9/AABLKn4fhvUAAA4qUV+p+gAADiqtoKn6AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_b1ayi"]
resource_name = "SimpleCard_Mesh"
_surfaces = [{
"aabb": AABB(-0.701308, -0.979167, -0.128396, 1.40262, 1.95833, 0.256792),
"attribute_data": PackedByteArray("/3//v8yQR8f/f0eHzJD//8yQ/38x70fH////vzHv//8x7/9///9Hh8yQ/7/MkEeHMe//vzHvR4e6z23Ius9tyEOwbchDsG3IQ7D//0Ow/3+6z/9/us///0Ow2L5DsNi+us/YvrrP2L66z26Ius9uiEOwbohDsG6I/3/RscyQddX/f6OjzJCj4/9/dZXMkNHxMe/R8f7/dZUx76Pj/v+jozHvddX+/9GxwOx1lcDsdZXA7KOjwOyjo8Ds0bHA7NGxPpN1lT6TdZU+k6OjPpOjoz6T0bE+k9Gxus91lbrPdZW6z6Ojus/RsbrP0bFDsHWVQ7B1lUOwo6NDsNGxQ7DRsUOw0fFDsNHxQ7Cj40Owo+NDsHXVQ7B11brP0fG6z9Hxus+j47rPo+O6z3XViKBVyIigVcj/f16OzJDo+Hbf//923/9/Me9ezv//6Lgx76PDmPf/vzHvo4OY90eH9OziuGnf8b6VoFWICpPiuGaI/7/MkKPDZohHh8yQo4N231XIdt9VyP+/bciIoP//iKD/f/+/////v/9/laDxvv+/2L5p31WI/79uiP+/boi6z8iDQ7DIg7rPo8O6z6PDQ7Cjw0Owo8O6z8O4us/DuEOww7hDsMO4Q7CDzkOwg866z4POus+Dzv9/6LjMkF7O/3+6qsyQjNz/f4yczJC66jHv6Pj//16OMe+66v//jJwx74zc//+6qvTsZI7A7IycwOyMnMDsuqrA7LqqCpNkjj6TjJw+k4ycPpO6qj6Tuqq6z4OOus+DjrrPjJy6z7qqQ7CDjkOwjJxDsLqqQ7Do+EOwuupDsLrqQ7CM3EOwjNy6z+j4us+66rrPuuq6z4zcus+M3P+/ddX/v6Pj/7/R8YigddWIoKPjiKDR8f+/0bH/v6Oj/791lSjf0bEo39GxKN+joyjfdZUo33WVtIjRsbSIo6O0iHWV1qDRsdago6PWoHWV1qB1lUr30bFK96OjSvd1lXbfddV236Pjdt/R8Xbf6PhX916OyaB9jqeIXo6IoKPDiKDCg3bfwoP/v8iDdt+jw/+/o8M1332O/7+Djoig6Pj/v+j4/7+Dzv+/jNz/v7rqiKB9zoigjNyIoLrq/7/DuP+/uqr/v4ycNd/JuCjfuqoo34ycp4jouLSIuqq0iIycyaDJuNaguqrWoIycV/fouEr3uqpK94ycdt99znbfjNx237rq/3//v/9//7/MkEfHzJBHx/9/R4fMkP//zJD/fzHvR8cx70fH////vzHv//8x7/9///9Hh8yQ/7/MkP+/zJD/v8yQR4fMkEeHMe//vzHv/78x7/+/Me9HhzHvR4cx70eHdt///3bf/3923/9/Me+jg5j3R4eY90eHZohHh2aIR4fMkKODzJCjg/9//7//f/+/zJBHx8yQR8f/f0eHMe9Hx////78x7/9/zJD/v8yQ/7/MkP+/zJD/v8yQR4fMkEeHMe//vzHv/78x7/+/Me9HhzHvR4f/f9GxzJB11f9/dZXMkNHx/v/RsXbf/3923/9/dt//fzHvo8Mx76PDMe+jw5j3/78x76ODmPdHh5j3R4eY90eHZohHh2aIR4fMkKODzJCjg4ig/38x7+j4//9ejqeI6LiniOi4V/fouFf36Lj/f/+/zJBHx8yQR8f/f0eHzJD/fzHvR8f///+/Me//f///R4fMkP+/zJD/v8yQR4fMkEeHzJBHhzHv/78x7/+/Me9HhzHvR4cx70eHQ7D/f/9/0bH/f6Oj/391lf7/dZX+/6Oj/v/Rsf9/Xo523/9/Me+jw5j3/78x76ODMe+jg5j3R4eY90eHZoj/v8yQo8NmiEeHzJCjg4ig/3//v/9//3/ouMyQXs7/f7qq/3+MnP//Xo7//4ycV/dejlf3Xo6niF6Op4hejoigo8OIoKPDiKDCg4igwoN238KDdt/Cg3bfo8N236PDdt+jw6eI6LiniOi4p4jouFf36LhX9+i4/3//v/9/R4fMkP9/Me9Hx////78x7/9///9Hh8yQ/78x70eHQ7D/f7rP/3//f9Gx/3+jo/9/dZX+/3WV/v+jo/7/0bHA7HWVPpN1lYigVcj/f16Odt//f///6Lgx76PDMe+jw5j3/7+Y9/+/Me+jgzHvo4OY90eHmPdHh/Ts4rhp3/G+laBViAqT4rhmiP+/zJCjw2aIR4fMkKODzJCjg3bfVciIoP9//7//f5Wg8b5p31WIus/Ig7rPyINDsMiDQ7DIg7rPo8O6z6PDQ7Cjw/9/6Lj/f7qq/3+MnP//Xo7//4yc//+6qvTsZI4Kk2SOtIjRsbSI0bG0iHWVSvfRsUr30bFK93WVSvd1lVf3Xo5X916Op4hejqeIXo6IoKPDiKDCg3bfwoN238KDdt+jw6eI6LiniOi4V/fouFf36Lg="),
"format": 34896613399,
"index_count": 912,
"index_data": PackedByteArray("RgC7AJsARgC6ALsAmwBPABUAmwC7AE8AuwAHAE8AuwB/AAcAugB/ALsAugAkAH8AJQC8AIAAJQC3ALwAgABWAAkAgAC8AFYAvAANAFYAvACFAA0AtwCFALwAtwArAIUAOwC9AJMAOwC0AL0AkwBZABwAkwC9AFkAvQALAFkAvQCKAAsAtACKAL0AtAAwAIoAMAC+AIoAMACwAL4AigBdAAsAigC+AF0AvgACAF0AvgBNAAIAsABNAL4AsAAiAE0AEAC/AG8AEABMAL8AbwBmABYAbwC/AGYAvwAKAGYAvwBcAAoATABcAL8ATAABAFwAHADAAGwAHABZAMAAbABjABMAbADAAGMAwAAEAGMAwABeAAQAWQBeAMAAWQALAF4ADQDBAFUADQBoAMEAVQBQAAgAVQDBAFAAwQAUAFAAwQBrABQAaABrAMEAaAAaAGsAGgDCAGsAGgBpAMIAawBlABQAawDCAGUAwgATAGUAwgBsABMAaQBsAMIAaQAcAGwABQDDAFMABQBfAMMAUwBYAAwAUwDDAFgAwwAYAFgAwwBtABgAXwBtAMMAXwAOAG0ADgDEAG4ADgBhAMQAbgBnABkAbgDEAGcAxAAXAGcAxABwABcAYQBwAMQAYQARAHAAKwDFAIUAKwCsAMUAhQBoAA0AhQDFAGgAxQAaAGgAxQCPABoArACPAMUArAA2AI8ANwDGAJAANwCoAMYAkABqABsAkADGAGoAxgAdAGoAxgCTAB0AqACTAMYAqAA8AJMAIwDHAE4AIwClAMcATgBiAAMATgDHAGIAxwASAGIAxwCWABIApQCWAMcApQBAAJYAQADIAJYAQACiAMgAlgBkABIAlgDIAGQAyAAVAGQAyACbABUAogCbAMgAogBGAJsAEQDJAHYAEQBhAMkAdgCgAEUAdgDJAKAAyQBKAKAAyQB3AEoAYQB3AMkAYQAPAHcARQDKAJoARQCgAMoAmgChAEMAmgDKAKEAygBJAKEAygCeAEkAoACeAMoAoABKAJ4AQwDLAJgAQwChAMsAmACiAEEAmADLAKIAywBHAKIAywCcAEcAoQCcAMsAoQBJAJwAAQDMAHoAAQBLAMwAegCjAB8AegDMAKMAzABEAKMAzAB1AEQASwB1AMwASwAQAHUAHwDNAHwAHwCjAM0AfACkACEAfADNAKQAzQBCAKQAzQCZAEIAowCZAM0AowBEAJkAIQDOAH4AIQCkAM4AfgClACMAfgDOAKUAzgBAAKUAzgCXAEAApACXAM4ApABCAJcAGQDPAHIAGQBnAM8AcgCmADoAcgDPAKYAzwA/AKYAzwBzAD8AZwBzAM8AZwAXAHMAOgDQAJIAOgCmANAAkgCnADgAkgDQAKcA0AA9AKcA0ACVAD0ApgCVANAApgA/AJUAOADRAJEAOACnANEAkQCoADcAkQDRAKgA0QA8AKgA0QCUADwApwCUANEApwA9AJQADADSAFcADABYANIAVwCpAC8AVwDSAKkA0gA5AKkA0gBxADkAWABxANIAWAAYAHEALgDTAIgALgCqANMAiACrACwAiADTAKsA0wA4AKsA0wCSADgAqgCSANMAqgA6AJIALADUAIYALACrANQAhgCtACoAhgDUAK0A1AA3AK0A1ACRADcAqwCRANQAqwA4AJEACgDVAFoACgBbANUAWgCuADQAWgDVAK4A1QAeAK4A1QB5AB4AWwB5ANUAWwAAAHkANADWAI0ANACuANYAjQCvADIAjQDWAK8A1gAgAK8A1gB7ACAArgB7ANYArgAeAHsAMgDXAIsAMgCvANcAiwCwADAAiwDXALAA1wAiALAA1wB9ACIArwB9ANcArwAgAH0AFgDYAHQAFgBmANgAdACxAD4AdADYALEA2AA0ALEA2ABaADQAZgBaANgAZgAKAFoAPwDZAJUAPwCxANkAlQCyAD0AlQDZALIA2QAzALIA2QCOADMAsQCOANkAsQA1AI4APQDaAJQAPQCyANoAlACzADwAlADaALMA2gAxALMA2gCMADEAsgCMANoAsgAzAIwABgDbAFIABgBUANsAUgC1ACkAUgDbALUA2wAvALUA2wBXAC8AVABXANsAVAAMAFcAKQDcAIQAKQC1ANwAhAC2ACcAhADcALYA3AAtALYA3ACJAC0AtQCJANwAtQAvAIkAJwDdAIIAJwC2AN0AggC3ACUAggDdALcA3QArALcA3QCHACsAtgCHAN0AtgAtAIcADgDeAHgADgBgAN4AeAC4AEoAeADeALgA3gAoALgA3gBRACgAYABRAN4AYAAFAFEASgDfAJ8ASgC4AN8AnwC5AEgAnwDfALkA3wAmALkA3wCDACYAuACDAN8AuAAoAIMASADgAJ0ASAC5AOAAnQC6AEYAnQDgALoA4AAkALoA4ACBACQAuQCBAOAAuQAmAIEA"),
"lods": [0.00633296, PackedByteArray("uwBPABUAuwAHAE8AuwAVAGQAuwB/AAcAugB/ALsAugAkAH8AxwC7AGQAxwC6ALsAugCBACQAxwBkABIAxwASAGIATgBiAAMATgDHAGIAIwDHAE4AfgDHACMAIQDHAH4ARAC6AMcAIQDMAMcAzABEAMcAfADMACEAHwDMAHwAegDMAB8AAQDMAHoAuAC6AEQAzAC4AEQAuACBALoAuAAmAIEAuACDACYAuAAoAIMA3gAoALgAzADeALgA3gBRACgAAQCEAcwAhAHeAMwAhAEBAJUBmQFRAN4AhAGZAd4AmQF0AVEAhAGVAbgBdAGZAbwBdAG8AYgBmQGEAaIBmQGiAbwBhAG4AaQBhAGkAaIBiAG8AZEBvAGiAZEBogGkAZwBpAG4AZwBuAGVAXgBuAF4AZwBowGcAZEBnAF4AZMBkQGcAdgAnAGTAdgAiQGRAQwAkQHYANIADACRAdIA2ACTAbEA0gDYALEADADSAJABiwEMAJABeAG9AZMBeAGUAb0BlAGlAb0BlAFxAaUBvgGlAXwBvQF8Aa0BkwG9Aa0BrgF8AaYBrgGmAX0BrgF9AacBkwGtAYMBrQGnAa8BgwGtAa8BrwGnAX4BrwF+AYUBrwGFAbYBgwGvAbYBtwGFAXIBtwFyAZYBrAG2AZYBgwG2AawBrAGWAQsAsQCTAYMBvQCDAawBsQCDAb0AvQCsAQsAsQC9ADsAvQALAJIBkgELAJgBOwC9AMUAxQC9AJIBrACxADsArAA7AMUA0gCxAKwAqQDSAKwAkAHSAKkAggGpAKwAkAGpAIIBggGsAMUAsQGQAYIBwAGQAbEBsQGCAbIBigGQAb8BdQGKAb8BdQG/AYcBhwG/AbABhwGwAYEBgQGwAaoBqgGwAYABgAGwAbIBgAGzAakBqQGzAX8BfwGyAbQBfwG0AagBqAG0AY4BqAGOAXcBsgGrAbQBsgGCAasBggHFAKsBqwHFAJ0BxQCSAZ0BqwGdAXkBtQGrAXkBtQF5AY8BnQGSAaABnQGgAZ8BkgG5AaABkgGXAbkBuQGXAXMBuQFzAZoBoQG5AZoBoQGaAXoBngGhAXoBngF6AZsBngGbAXsBugGeAXsBnQGeAboBeQGdAboBeQG6AYwBjAG6AYYBuwF7AYYBjQGGAXYB"), 0.0402949, PackedByteArray("fwAHAE8AfwBPAGQAfwCBACQAfwAmAIEAfwCDACYATgB/AGQATgBkABIATgASAGIATgBiAAMANgGDAH8ANgEoAIMAWgE2AX8AWgF/AE4AMwE2AVoBNgEzAWoBHwBaAU4AHwBOAHwAfABOACEAIQBOAH4AfgBOACMAMgFkAWoBMgFUAWMBYwFUAToBaQFjAToBNgFpAU0BTQFpAT8BTgE/AXABcAFDAWABcAFAAUMBYAFBAVIBQQFnAU8BTwFnAUwBUAFMATgBaAFYAUwBaAFEAVgBaAFlAUQBZQFXAUQBZQE1AVcBZQFWATUBPAFWAWYBQgFmAWcBQgE9AWYB0gA9AUIBQAHSAEIBOwE9AdIAQAE7AdIAawE7AUABOwFuAT0BPgFuAWIBPAFhAVUBYQE0AVUBYQFLATQBYQFHAUsBYQFcAUcBbAFcAWEBOgFTAWwBUwFZAWwBUwExAVkBbQFZAUUBbQFGAVwBbQFFAVsBbQFbAUYBSAFfAV0BXgFfAUgBXQFfAVEBXQFRATkBSQFfAV4BSQFvAV8BhABvAUkBSgFvAYQANwFvAUoBNwFOAW8B"), 0.0698535, PackedByteArray("KwEHAE8AKwFPAGIAGQErAWIAGQFiAAMAFwErARkBFwEIASsBCAEoACsBBQEIARcBCAEFAR4BLAEjAQkAGgEjASwBGgEvASQBCQEvARoBCQEhAS8BIQESAS8BMAESASUBJQETARUBFQEPASkBFAEpAR0BxQAPARUBDAEPAcUAEQHFABUBEQEMAcUAHwELAREBIAEGAQsBFAEbASIBIgEbAQoBJgEYAQcBJgEWARgBLgEWASYBBAEWAS4BKAEEACoBHAEoASoBDQEDAS0BEAEtAScBDgEtARAB"), 0.148967, PackedByteArray("6ADrAPkA5ADoAPkA5AD5AOYA6gD9AO0A6gD1AP0A/wDhAOUAAQHnAPoA/AD6AOwA9gD7APwA9gACAfsA9wDxAAIB7wDxAPcA9ADvAPcA/gD0APgA6QDuAPMA6QDjAO4A8ADiAPIA8gDiAAAB")],
"material": SubResource("StandardMaterial3D_wvkek"),
"primitive": 3,
"uv_scale": Vector4(0.866839, 2, 0, 0),
"vertex_count": 449,
"vertex_data": PackedByteArray("te2dDf+/I6u17Z0N/7+G9bXtYfL/v5+nte1h8v+/4fS17WHy/7/t70kSnQ3/v1bwSRKdDf+/n6dJEmHy/79h+UkSYfL/v+H0SRJh8v+/I6u17Z0N/z8B7LXtYfL/P9PqSRKdDf8/0+pJEmHy/z8L7BxUKwhU1Xn/HFQrCFTV0f/iqysIVNWq/uKrKwhU1dH/4qvT91TVxP/iq9P3VNV4/xxU0/dU1UD/HFTT91TVef/iqysIqiqZ/+KrKwiqKmT/HFQrCKoqwf8cVCsIqipk/xxU0/eqKoj/HFTT96oqZP/iq9P3qiqk/+Kr0/eqKmT/BvWjPlTVAJgG9aM+VNXy/wb1/39U1e+XBvX/f1TV//8G9VvBVNUAmAb1W8FU1cL/+ApbwVTV8v/4ClvBVNUAmPgK/39U1f//+Ar/f1TV75f4CqM+VNWU//gKoz5U1QCY+ApbwaoqAej4ClvBqioB6PgK/3+qKg7o+Ar/f6oqDuj4CqM+qioB6PgKoz6qKgDoBvVbwaoqAOgG9VvBqioB6Ab1/3+qKg7oBvX/f6oqDugG9aM+qioB6Ab1oz6qKgHoHFRbwQAAh/8cVFvBAACH/xxU/38AAIX/HFSjPgAAh/8cVKM+AACH/+KrW8EAAIf/4qtbwQAAh//iq/9/AACF/+Kroz4AAIf/4qujPgAAh//iq1vB/////+KrW8H///v/4qv/f/7////iq/9//v///+Kroz7+/+j/4qujPv7/+/8cVFvB///2/xxUW8H///v/HFT/f/7///8cVP9//v///xxUoz7+//v//dQaCa3RhPj91BoJrdGb98Xz+N+t0ZyZxfP4363RyvwBK+T2rdHZ+wEr5Pat0Z74OQwGIK3RH/s5DAYgrdGcmXoNCQr/f3jpeg0JCv9/Icd6DfX1/3/x6noN9fX/f7LEOQwGIFEub+cBKxoJUS4d/P3U5PZRLib8xfMGIFEunOeE8gkK/3+yxITyCQr/f1nphPL19f9/IceE8vX1/3+56QErGgmt0RH4ASsaCa3Rs/z/fysIVNX///3U5Pat0fX9/dTk9q3REvv/f9P3VNX///9/0/dU1f///dQaCVEuafv/fysIqir//wEr5PZRLm77/3/T96oq////f9P3qir//xxU////f1v/4qv///9/ff8cVAAA/396/xxUAAD/f2H/4qsAAP9/Sf/iqwAA/39h/xxUUR9VBZH/HFRRH1UFh//iq1EfVQWH/+KrUR9VBYn/4qtRH6n6R//iq1Efqfr3/xxUUR+p+vf/HFRRH6n6y//F8wYgrdELmsXzBiCt0RT+BvVRX1TV75cG9VFfVNX//wb1raBU1e+XBvWtoFTV//85DPjfrdGw/jkM+N+t0Qua+AqtoFTV///4Cq2gVNXvl/gKUV9U1f//+ApRX1TV75c5DPjfUS6c5/gKraCqKg7o+AqtoKoqDuj4ClFfqioO6PgKUV+qKg7oxfP431Eub+cG9a2gqioO6Ab1raCqKg7oBvVRX6oqDugG9VFfqioO6BxUreBVBYn/HFSt4FUFh/8cVK2gAACF/xxUUV8AAIX/4qut4FUFh//iq62gAACF/+KrUV8AAIX/4qut4Kn67v/iq62g/v///+KrraD+////4qtRX/7////iq1Ff/v///xxUreCp+r//HFStoP7///8cVK2g/v///xxUUV/+////HFRRX/7/////f6M+/v////9//3/+/////39bwf/////w1aM+qfrT//DV/3+p+v//8NVbwan6////f6M+AAD///9//38AAP///39bwQAA//8OKqM+VQUf+w4qoz5VBR77Dir/f1UFHfsOKlvBVQUe+w4qW8FVBR77//+jPv9/AMD///9//3//v///W8H/fwDA8NWjPlUFHvvw1f9/VQUd+/DVW8FVBR778NVbwVUFH/sAAKM+/38AwAAA/3//f/+/AABbwf9/AMAOKqM+qfr5/w4q/3+p+v//Dipbwan67P9LKoDghvWL/rEBU+D/f0HAs9WA4HgKdPtN/lPg/396wHfVQgH/f2D6d9W8/v9//PqHKrz+/3+V+v9/////f///hypCAf9/Ovr/fwAA/3///0sqgOB4Clj7/3+t4FUF//+z1YDghvWc//9/reCp+v///39RH6n6////f1Ff//////9/raD/////s9V+H4b1Pv3w1VFfqfr///DVraCp+v///39RH1UF////f1FfAAD///9/raAAAP//Syp+H3gKdPsOKlFfVQUd+w4qraBVBR37Tf6rH/9/QcD//1Ff/3//v///raD/f/+/s9V+H3gKWPvw1VFfVQUd+/DVraBVBR37sQGrH/9/esAAAFFf/3//vwAAraD/f/+/Syp+H4b1Jf8OKlFfqfr//w4qraCp+v//te2dDf+//qi17Z0N/78QvrXtnQ3/v5rxte2dDf+/p+217WHy/7//pbXtYfL/v77tte1h8v+/7+5JEp0N/7/I60kSnQ3/v8XwSRKdDf+/r6pJEmHy/7819UkSYfL/v475SRJh8v+/Lqm17Z0N/z+B8rXtnQ3/P1Dzte2dDf8/1ty17WHy/z8M8bXtYfL/PxvcSRKdDf8/mu9JEp0N/z+87EkSnQ3/P4DVSRJh8v8/A+xJEmHy/z8j8kkSYfL/P1vkASvk9q3R//oBK+T2rdFV+QEr5Pat0dP7eg319f9/eeh6DfX1/39jt3oN9fX/f4rKhPL19f9/6bWE8vX1/3+zx4Ty9fX/f9DkhPL19f9/UOu17Z0N/7+Tt7XtnQ3/v5yqte2dDf+/dvC17Z0N/79r87XtYfL/vxunSRKdDf+/LuxJEp0N/79mqkkSYfL/v4b2te2dDf8/U/K17Z0N/z/68rXtnQ3/Pw7hte2dDf8/vOa17WHy/z8S8bXtYfL/PwniSRKdDf8/jO9JEp0N/z/n4EkSnQ3/P7HjSRJh8v8/tutJEmHy/z9+7wb1oz5U1aqeBvWjPlTVRe8G9VvBVNU2ngb1W8FU1Urw+AqjPlTVDJ4BK+T2rdH//wEr5Pat0az5ASvk9q3Rlfp6DQkK/3/k5HoNCQr/f9Tueg0JCv9/Zel6DQkK/3+NxHoN9fX/fwPoeg319f9/trZ6DfX1/3+TtnoN9fX/fzrKhPL19f9/RLiE8vX1/3/yx4Ty9fX/f33khPL19f9/lOv91OT2rdF4/DkM+N+t0dvvOQz4363RI59N/qsf/3+exk3+qx//fyW2sQGrH/9/gryxAasf/3+yyrXtnQ3/v7mtte2dDf+/fvW17Z0N/79+8LXtYfL/v0Grte1h8v+/xvFJEp0N/79W7UkSnQ3/v4mqSRJh8v+/3/lJEmHy/7/wrLXtnQ3/PyXrte2dDf8/T/G17WHy/z+T5LXtYfL/Pxrwte1h8v8/FuFJEp0N/z9d5EkSnQ3/P1TuSRJh8v8/5uVJEmHy/z8k8UkSYfL/PyHi4qvT91TV//8G9aM+VNWenQb1/39U1XSdBvVbwVTVhpz4ClvBVNWvnfgK/39U1Xaf+AqjPlTV55zF8/jfrdFDnwEr5Pat0an7eg0JCv9/8Oh6DQkK/38wxXoN9fX/fxjreg319f9/CeZ6DfX1/38ZuXoN9fX/f0zHhPIJCv9/zL+E8gkK/3+F6YTy9fX/fzHGhPL19f9/3en91OT2rdHb/P9/0/dU1f//xfMGIK3RSqLF8wYgrdEB8Ab1UV9U1TGeBvWtoFTVPp85DPjfrdGvoPgKraBU1bycsQFT4P9/LbexAVPg/3+7xU3+U+D/f2K6Tf5T4P9/E8h31UIB/3+S+nfVQgH/f5z5d9W8/v9/LPp31bz+/3/L/IcqvP7/fxz7hyq8/v9/uPmHKkIB/39B+ocqQgH/f5L5hypCAf9/4PtN/qsf/396v03+qx//f+u0Tf6rH/9/e8yxAasf/3/OtrEBqx//f5LHte2dDf+/iq217WHy/7+arLXtYfL/v3DxSRKdDf+/ufBJEp0N/7+aqkkSYfL/v2f5SRJh8v+/f6y17Z0N/z9h6UkSYfL/Pwbp4qvT91TVof8cVNP3VNX//wb1oz5U1Z6fBvX/f1TVRp4G9VvBVNX0nfgKW8FU1aWe+Ar/f1TV7J/4CqM+VNVXnfgKW8GqKpvnBvVbwaoq6OT91BoJrdHi+MXz+N+t0RehASvk9q3Ri/s5DAYgrdHen3oNCQr/fxTpeg0JCv9/9+96DQkK/3/ownoNCQr/f8PPeg319f9/Mup6DfX1/3/g5XoN9fX/f3u4eg319f9/W8Y5DAYgUS7P5AErGglRLl37/dTk9lEuo/vF8wYgUS6A54TyCQr/f3m+hPIJCv9/8eaE8vX1/3+4yITy9fX/f6nphPL19f9/aPEBKxoJrdFc+P3U5Pat0dD7/3/T91TV///91BoJUS4L+wEr5PZRLrr6HFT///9/Wf8cVP///39X/+Kr////f33/4qv///9///8cVAAA/3+n/xxUAAD/f7z/4qsAAP9/If/F8wYgrdEiogb1UV9U1ZeeBvWtoFTVs6A5DPjfrdG3oPgKraBU1d+c+ApRX1TVfJw5DPjfUS5v5cXz+N9RLkzl//+jPv9/rML//6M+/39Ltv//W8H/f9G8AACjPv9/frcAAKM+/3/nyAAAW8H/f1vBAABbwf9/NLWxAVPg/3/au7EBU+D/f4TJTf5T4P9/ksRN/lPg/39avHfVQgH/f476d9W8/v9/KvuHKrz+/3/v+ocqvP7/f0j5hypCAf9/8/lN/qsf/3+Cwk3+qx//f1i1sQGrH/9/37yxAasf/38/yLVrS0y4k99m28rYGFEZhxPXGgsSSOXT7SM1Jucka/aXd2xRmUmUs7PvhLof/ppsAABlkv/kehjg4+Jd/+viPf9TgNFiwYDsYhQdvAAbHaAAc38gnV5/Gp0WgRgeOYBrHZqeP/5rncX/MH8f4sV/k+LDYUUBk2I5AJl9IwWYnTN//38AALmd/3+qhJ4C3QCUHWZiyoBlgtv6RWL/f/9//v8P/2/iU3tg/ep/4f4LgPP+/3/+//9//v8dger/on59/1yBgQDhfhQA/38AAP9/AADzfwsBFIAdAQKAR///f0n//3////yAtv9Kf/7/An9IALSAAAD/fwAA/H+3AP9/tQC5gLOAswC6ALyA/3+8gP9/uYBLf7mAS39Ff7OARX+ygEJ//39Cf/9/RX9Lf+KE0mKOhK1iI6NREUAIEhzueaScE3snnSr3LeTbXK3uJcu/6fdGceaaaLGzC6DexYt0cfx0pbP2cFpqCe9/NwnzXyA6JpYMSwe5jRmmNHIWv+JF+3zjofn/f9FiUBzOBsQcywX/fy2d/38tncWGXSMtnf7/KXmT3P9/0eL/f9HiWX+sv5k/ywBjwDb/VsBR/5GASECtgFZA/Ifv/gSH9P8JgAUHS4BDB6GAC3mwgA15DflN/wz5Uf+GcXImRJwyeP9/AAC5nf9//38AALmd/3+jY5aHeI6M2UVi/3//f/7/RWL/f/9//v8PgMf2/3/+//9//v//f/7//3/+/3OLjQP/fwAA/38AAP9/AAD/fwAAs3+7+PV/+fj/f/7//3/+//p4CgD/fwAA/38AAPEGsAC8gP9/vID/f7yA/3+8gP9/U3/xhkJ//39Cf/9/Qn//f0J//3//f0l//3//f/9/tYAxh1F/PYf/f6sAMge1gP///3/+//9/SP87gX3/QX/0//9//v/kfy//CoBB/69+eQL/fwAAeIIgAfR/vQD/fwAAvYAKAMN+gQCGfd7+/3/+/0+Bhf1U/8z4wXj/f814qoB4eYOGZIvw61t14gMClEEIH4YRQ488vAaqecy8/3//v/nCBfr/f/8/134X+P9/AvltBpwG/3/8hv9/Ann/f/9//3//f2yGYHk9h/9/PYf/f/yG/v//f/7//3/+/6OKHPz/f////3/+/5p0DhT/fwAA/38AACeB5wf/fwAA/38AAPxrvff/f/7//3/+/4f5bPnBeP9/wXj/f4aS/D2ZnXoyk31TwoiChKLCTMsDThv3+j8MHfxn/e4MvCldAwqzlO85ajSFI2plpxtwCsNxdqlProT9AJ6T4B4uotEAqm4bCwZAOPYXibr55JxA7+CD8cZLf7np3XDF5qV51IveeNWqjnRRxIJvhKy/iDj7co4z5v6TrANxecIAXhgDAiv3DRRCb3VAPn80OLN/na5DbE7ZE7o9CWv1HQZlRHDyWmxAnz56IEaKgQoEkY/5LSeOMBZfoskAiHItCUSVj/+8mVL4AIvB9lKDdMhye9Lk1XmgCbJ7pP/glEQPjoKf8f51Gfn0bE7F2IGTbAJ7gq9ZDAj79zay/WoCIQA4Tj3qUm/Qq/KU2Nz0iFv7P4Z8+HaS3QP9iDEBaRhAAn/xiBH1LgAIY38RFr6WoNLjdGAUgHcVDspgY/JjeXX+CGy2SHWJgoQdgJ6tXb69EN0eqw8s+rTzdERm8vdpBKjBkfa4WID0KveCNRmUXVUCa3C4AZ5xWgmco4/9Gpav/293CdhqfvTf/2586DVNpAGVdSYPUn/iAPGMJQmRi1rvUICU/2dr8vCRpeIUUnNLvC7PhPByTE7pp26/sXBv5KeTmoXQvZpjz8ljAzK6j6dNrrHQFRsztxFOMxgIdH50/mRjTzOCggHc/3zuA6CBPQF1msjO9YIg/HeICfLOjE/oLJrGCqd8OAG+jDA1UICpaQQ5LAhqUO0KoXEPz/t//4+/tUPzzQUr/l/Anv3Hb+EdnXomB9F9UgI5bYn5pmmh9tRs/0dNvYMQYxspDmnmefAMQSHvVWo6p3OQ7bkjhWkk4Xkp3Hsz1QCZfEbZZnYODtV/NgBjiKYFDYjs8/N/9f98eAf7FIBU/nWCwQBthXtccZ5RD4xzVrviX4Hv7dDp8lzAMuk1Uebrx01D65RxAq4WcCCnEJqB0U+bos7ecdr70aea9QtZWApIf9cL7mShLwuOclPcr9gUDzDXDXVBIxgs28j5eSWmBb1/vP/chT8pTni32kh+e80WfvLdpmjnAuBWugLAquj9hanv/leD5iE+Y4Yzr364AbqAjgBQmvbOBIGq/uJ+JP94gCH0oJHyBDd9cQVkfxEBRIWAAuR6s/3ceSz9voKl+sOAkP4pi4Lsy5Ln2m2TBAh9p6YRaYs5N0lEswrXdKTIsnuSq+u8JfaJcIocNnYQEQBg8fE8bvT4")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_d41tx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dakll"]
albedo_color = Color(1, 0.694118, 0.509804, 1)

[sub_resource type="QuadMesh" id="QuadMesh_x50fm"]
material = SubResource("StandardMaterial3D_dakll")
size = Vector2(1, 1.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y6j1g"]
resource_local_to_scene = true
render_priority = -128
transparency = 1
no_depth_test = true
shading_mode = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_ne87j"]
size = Vector3(0.046, 1.40829, 1)

[node name="HandCard3D" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_iur57")

[node name="Model" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="EnergySocketPivot" type="Marker3D" parent="Model"]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2.05456e-15, 0.389391, 0.0988974)

[node name="HandCardEnergySocket" parent="Model/EnergySocketPivot" instance=ExtResource("2_87ldq")]
visible = false

[node name="CardModel" type="MeshInstance3D" parent="Model"]
unique_name_in_owner = true
transform = Transform3D(-0.733761, 0, 2.33237e-08, 0, 0.733761, 0, -2.33237e-08, 0, -0.733761, 0, 0, 0)
material_override = ExtResource("3_cro0o")
mesh = SubResource("ArrayMesh_b1ayi")
skeleton = NodePath("")

[node name="IconOrigin" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0132882, -0.0531537, -0.113039)

[node name="Quad" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("QuadMesh_x50fm")
surface_material_override/0 = SubResource("StandardMaterial3D_y6j1g")

[node name="SubViewport" type="SubViewport" parent="Quad"]
disable_3d = true
transparent_bg = true
size = Vector2i(563, 789)

[node name="QuadBackside" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.00970364, 0, 4.2416e-10)
visible = false
mesh = SubResource("QuadMesh_x50fm")

[node name="Area3D" type="Area3D" parent="." groups=["hand_area"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0412399, 0, 1.80265e-09)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, -6.75016e-14, 0, 1, 0, 6.75016e-14, 0, 1, -0.042862, 0.00741838, 1.11022e-15)
shape = SubResource("BoxShape3D_ne87j")

[node name="SmoothMovement" parent="." node_paths=PackedStringArray("rotation_custom_node") instance=ExtResource("4_v18nh")]
rotation_custom_node = NodePath("../Model")

[node name="ScaleOrigin" parent="SmoothMovement" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.700331, 0)

[node name="SimpleCard" parent="." instance=ExtResource("5_pkbxk")]
transform = Transform3D(-3.20737e-08, 0, -0.733761, 0, 0.733761, 0, 0.733761, 0, -3.20737e-08, 0, 0, 0)
visible = false

[node name="Cube" parent="SimpleCard" index="0"]
material_override = ExtResource("3_cro0o")

[node name="TextureViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(1024, 512)

[node name="CardTexture" parent="TextureViewport" instance=ExtResource("6_ywg8h")]
unique_name_in_owner = true

[editable path="SmoothMovement"]
[editable path="SimpleCard"]
